<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:srcCompat="@android:drawable/ic_menu_revert"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/Auspicious_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Auspicious_color"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/gold"
        android:fontFamily="@font/playfair_display_bold"
        android:gravity="center"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button_sun"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:fontFamily="@font/playfair_display"
            android:text="@string/button_sun"
            android:textColor="@color/gold" />

        <Button
            android:id="@+id/button_mon"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:fontFamily="@font/playfair_display"
            android:text="@string/button_mon"
            android:textColor="@color/gold" />

        <Button
            android:id="@+id/button_tue"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:fontFamily="@font/playfair_display"
            android:text="@string/button_tue"
            android:textColor="@color/gold" />

        <Button
            android:id="@+id/button_wed"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:fontFamily="@font/playfair_display"
            android:text="@string/button_wed"
            android:textColor="@color/gold" />

        <Button
            android:id="@+id/button_thu"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:fontFamily="@font/playfair_display"
            android:text="@string/button_thu"
            android:textColor="@color/gold" />

        <Button
            android:id="@+id/button_fri"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:fontFamily="@font/playfair_display"
            android:minWidth="48dp"
            android:text="@string/button_fri"
            android:textColor="@color/gold" />

        <Button
            android:id="@+id/button_sat"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:fontFamily="@font/playfair_display"
            android:text="@string/button_sat"
            android:textColor="@color/gold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lucky_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/lucky_color"
            android:textColor="@color/gold" />

        <TextView
            android:id="@+id/output_lucky"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/playfair_display_bold"
        android:textColor="@color/gold"
        android:text="@string/text_work" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/output1_work"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output2_work"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output3_work"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/playfair_display_bold"
        android:textColor="@color/gold"
        android:text="@string/text_money" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/output1_money"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output2_money"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output3_money"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/playfair_display_bold"
        android:textColor="@color/gold"
        android:text="@string/text_love" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/output1_love"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output2_love"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output3_love"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_fortune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/playfair_display_bold"
        android:textColor="@color/gold"
        android:text="@string/text_fortune" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/output1_fortune"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output2_fortune"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output3_fortune"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/playfair_display_bold"
        android:textColor="@color/gold"
        android:text="@string/text_health" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/output1_health"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output2_health"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output3_health"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_supportive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/text_supportive"
        android:textColor="@color/gold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/output1_supportive"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output2_supportive"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output3_supportive"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_unfortunate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/playfair_display_bold"
        android:textColor="@color/gold"
        android:text="@string/text_unfortunate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/output1_unfortunate"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output2_unfortunate"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />

        <TextView
            android:id="@+id/output3_unfortunate"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/color1" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>